--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -40,16 +40,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9e583c46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nothing\n"
+     ]
+    }
+   ],
    "source": [
     "warnings.filterwarnings('ignore')\n",
     "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "logger = logging.getLogger(__name__)\n",
     "SEED = 42\n",
-    "np.random.seed(SEED)"
+    "np.random.seed(SEED)\n",
+    "print('nothing')"
    ]
   },
   {
