feat:💄 remove the file

--- a/notebook/supervisor learning/final_model.ipynb
+++ b/notebook/supervisor learning/final_model.ipynb
@@ -1,14 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0912d95a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "backend-_rtLvpYT-py3.12",
