--- a/notebook/EEG/eeg-bci-robot-control.ipynb
+++ b/notebook/EEG/eeg-bci-robot-control.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "4ae3fee7",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,8 @@
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns \n",
     "import logging\n",
-    "import warnings"
+    "import warnings\n",
+    "import statistics"
    ]
   },
   {
@@ -689,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "id": "f85cd10a",
    "metadata": {},
    "outputs": [],
@@ -699,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "id": "69d903dd",
    "metadata": {},
    "outputs": [
@@ -979,7 +980,7 @@
        "0.84831    51.703  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "id": "0b4dba7d",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "id": "62e8878a",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "id": "5b81695a",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b444cb63",
    "metadata": {},
    "outputs": [
